--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="https://media.discordapp.net/attachments/909461682651279360/962708922496606268/954851066795675698.webp?width=81&height=81" type="image/x-icon">
+<link rel="icon" href="https://media.discordapp.net/attachments/965939466428633128/965939471692484668/unknown.png?width=78&height=86" type="image/x-icon">
 <meta property="og:type" content="website">
 <meta property="og:title" content="nu mi dati niciodata expose bai ratatilor">
 <meta property="og:description" content="muie la saraci">
-<meta property="og:url" content="https://saki.cf/
+<meta property="og:url" content="https://znkcpt.cf">
         <meta property=" og:image" content="https://gfycat.com/alarminghandsomedipper-otter-animals
         <meta name=" theme-color" content="#20201F">
-<title>$ a k i's website | Home</title>
+<title>znk website | Home</title>
 <style>
         @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
         
@@ -246,16 +247,13 @@
 <body>
 <div class="bg-image"></div>
 <div class="bg-text">
-<h2>$ a k i's website</h2>
-<h1 style="font-size:50px">Welcome to $ a k i's website</h1>
-<p>Check out my main <a href="https://pastebin.com/mhHn0sgm">codes!</a></p>
-<a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://github.com/plainmata">Github</a>
-<a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://twitter.com/vladxyzr">Twitter</a>
-<a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://xyzr.cf/">Other Website</a>
-<a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://cataas.com/cat/says/salut">Get a cat</a>
+<h2>znk website</h2>
+<h1 style="font-size:50px">Welcome to znk website</h1>
+<a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://github.com/zenkadev">Github</a>
+<a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://www.youtube.com/c/Las7Man">YouTube</a>
 </div>
 <video autoplay muted loop id="myVideo">
-<source src="Florin Salam si Mr Juve - Foc,foc [videoclip oficial] 2022.mp4" type="video/mp4">
+<source src="da.mp4" type="video/mp4">
 Your browser does not support HTML5 video.
 </video>
 <script>// Possible improvements:
@@ -327,7 +325,7 @@ Your browser does not support HTML5 video.
     false
   );
   
-  audioPlayer.querySelector(".volume-button").addEventListener("click", () => {
+  audioPlayer.querySelector(".volume-buvtton").addEventListener("click", () => {
     const volumeEl = audioPlayer.querySelector(".volume-container .volume");
     audio.muted = !audio.muted;
     if (audio.muted) {
