--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="nu mi dati niciodata expose bai ratatilor">
 <meta property="og:description" content="muie la saraci">
-<meta property="og:url" content="https://znkcpt.cf">
+<meta property="og:url" content="https://znkcpt.xyz">
         <meta property=" og:image" content="https://gfycat.com/alarminghandsomedipper-otter-animals
         <meta name=" theme-color" content="#20201F">
 <title>znk website | Home</title>
@@ -253,7 +253,7 @@
 <a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://www.youtube.com/c/Las7Man">YouTube</a>
 </div>
 <video autoplay muted loop id="myVideo">
-<source src="da.mp4" type="video/mp4">
+<source src="http://znkcpt.cf/da.mp4" type="video/mp4">
 Your browser does not support HTML5 video.
 </video>
 <script>// Possible improvements:
