--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://znkcpt.xyz">
         <meta property=" og:image" content="https://gfycat.com/alarminghandsomedipper-otter-animals
         <meta name=" theme-color" content="#20201F">
-<title>znk website | Home</title>
+<title>znk website</title>
 <style>
         @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
         
