--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 <a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://www.youtube.com/c/Las7Man">YouTube</a>
 </div>
 <video autoplay muted loop id="myVideo">
-<source src="http://znkcpt.cf/da.mp4" type="video/mp4">
+<source src="da.mp4" type="video/mp4">
 Your browser does not support HTML5 video.
 </video>
 <script>// Possible improvements:
