--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ Your browser does not support HTML5 video.
 
   
  <script>
-     $.getJSON("https://api.countapi.xyz/hit/mihaidev-cloud.rest/visits", function(response) {
+     $.getJSON("https://api.countapi.xyz/hit/znkcpt.xyz/visits", function(response) {
     $("#visits").text(response.value);
 });
  </script>
