--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@ return false;
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="https://media.discordapp.net/attachments/965939466428633128/965939471692484668/unknown.png?width=78&height=86" type="image/x-icon">
+<link rel="icon" type="image/x-icon" href="https://media.discordapp.net/attachments/941417574137229383/972571581438115910/unknown.png?width=379&height=292">
+  
 <meta property="og:type" content="website">
+  <meta property="og:title" content="znk website">
+      <meta property="og:image" content="https://media.discordapp.net/attachments/941417574137229383/972571581438115910/unknown.png?width=379&height=292"/>
+
 <meta property="og:description" content="welcome to my website">
       <meta name="theme-color" content="#2F3037">
 
@@ -383,7 +387,7 @@ Your browser does not support HTML5 video.
 
   
  <script>
-     $.getJSON("https://api.countapi.xyz/hit/znkcpt.xyz/visits", function(response) {
+     $.getJSON("https://api.countapi.xyz/hit/www.znkcpt.xyz/visits", function(response) {
     $("#visits").text(response.value);
 });
  </script>
