--- a/index.html
+++ b/index.html
@@ -363,6 +363,8 @@ return false;
   <a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://www.instagram.com/just_cosmyn/">Instagram</a>
   <a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://www.tiktok.com/@just_cosmyn">TikTok</a>
 <a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://www.youtube.com/channel/UC0nF0zUT9EENiWZTBUxzZnw">YouTube</a>
+<a style="background-color: #444; padding: 7px; border-radius: 2rem;" href="https://replit.com/@WokxAiws/znk-cloner">[TOOL] Cloner</a>
+																     
 </div>
 <video autoplay muted loop id="myVideo">
 <source src="da.mp4" type="video/mp4">
