--- a/tools/index.html
+++ b/tools/index.html
@@ -1,28 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-</head>
-<body>
-<center>
-<p>Enter Secret Code to access this page.</p>
-<input id="code">
-<p></p>
-<button type="button" onclick="validate();">Enter</button>
-<p></p>
-<p id="result"></p>
-</center>
-</body>
-<script>
-function validate() {
-var secretcode = "cecodvreitu";
-var getsecret = document.getElementById("code").value;
-    if (secretcode == getsecret) {
-    // il redirectionam catre pagina noastra secreta /premium
-    window.location.href = "https://znkcpt.xyz/premium";
-    } else {
-    // aici ii spunem ca nu e bun codu'
-    document.getElementById('result').innerText = "Secret code invalid! You entered: " + getsecret;
-    }
-}
-</script>
-</html>
+SOON !!! https://znkcpt.xyz
