--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ return false;
       <meta property="og:image" content="https://media.discordapp.net/attachments/941417574137229383/972571581438115910/unknown.png?width=379&height=292"/>
 
 <meta property="og:description" content="welcome to my website">
+<h1>ABOUT
+	salut sunt znk cel mai smecher de la mine din sat sunt din timisoara sunt un fotbalist in devenire si sunt locul 1 taste coaie, te provoc 1v1 cu coaiele mele nervoase znk patron#9999
+</h1>
       <meta name="theme-color" content="#2F3037">
 
 <meta property="og:url" content="https://znkcpt.xyz">
