--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ Your browser does not support HTML5 video.
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+       <div class="counter">   
         <center>
           <h1>salut sunt znk cel mai smecher de la mine din sat sunt din timisoara sunt un fotbalist in devenire si sunt locul 1 taste coaie, te provoc 1v1 cu coaiele mele nervoase znk patron#9999</h1>
           </center>
