--- a/m1n0r3/index.html
+++ b/m1n0r3/index.html
@@ -15,15 +15,12 @@
 <link href="style.css" rel="stylesheet">
 <link rel="icon" href="icon.png" type="image/png">
 
-<meta name="description" content="welcome to my website" />
-<meta name="copyright" content="znkcpt">
-<meta name="author" content="znkcpt">
-<meta name="og:title" content="znkcpt - Home" />
+<meta name="author" content="free t33ns">
+<meta name="og:title" content="free t33ns" />
 <meta name="og:type" content="website" />
-<meta name="og:description" content="welcome to my website
 " />
-<meta name="og:site_name" content="znkcpt.xyz" />
-<meta name="og:image" content="https://media.discordapp.net/attachments/941417574137229383/972571581438115910/unknown.png" />
+<meta name="og:site_name" content="znkcpt.xyz/m1n0r3" />
+<meta name="og:image" content="https://i.pinimg.com/736x/4e/a9/f9/4ea9f9c7a4bf529a5e4ab83ea71c04b9.jpg" />
 </head>
 <body>
 
