--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>znkcpt.xyz</title><link rel="icon" href="favicon.png"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+<title>znkcpt | home</title><link rel="icon" href="favicon.png"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
@@ -23,7 +23,7 @@
 <meta name="og:description" content="welcome to my website
 " />
 <meta name="og:site_name" content="znkcpt.xyz" />
-<meta name="og:image" content="https://media.discordapp.net/attachments/941417574137229383/972571581438115910/unknown.png" />
+<meta name="og:image" content="https://data.whicdn.com/images/362689983/original.jpg" />
 </head>
 <body>
 
