--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='profile.znkcpt.xyz'" />
+<meta http-equiv="Refresh" content="0; url='https://profile.znkcpt.xyz'" />
